--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,18 +10,45 @@
       <h1 class="title">{{ site.name }}</h1>
     </div>
 
-    <div class="list-container">
-      <ul class="song-list">
-        <li class="song">Song Name</li>
-        <li class="song">Song Name</li>
+    <div class="now-playing">
+      <h3>Now Playing:</h3>
+      <img class="artwork" src="https://s-media-cache-ak0.pinimg.com/originals/4d/9a/cc/4d9accabd07ebff45cd1ea4128e34236.jpg" alt="">
+      <div class="info">
+        <div class="name">No Way</div>
+        <div class="artist">The Naked and Famous</div>
+        <div class="rating">
+          <i class="material-icons">favorite_border</i>
+          <i class="material-icons">favorite_border</i>
+          <i class="material-icons">favorite_border</i>
+          <i class="material-icons">favorite_border</i>
+          <i class="material-icons">favorite_border</i>
+        </div>
       </div>
+    </div>
+
+    <div class="search-box">
+      <input type="text" name="" placeholder="Search for a song">
+    </div>
+
+    <div class="list-container">
+      <h3>Next up:</h3>
+      <table>
+        {% for song in site.data.songs %}
+        <tr>
+          <td class="ranking">{{song.ranking}}</td>
+          <td class="name">{{song.name}}</td>
+          <td class="artist">{{song.artist}}</td>
+          <td class="vote"><i class="material-icons">thumb_up</i></td>
+        </tr>
+        {% endfor %}
+      </table>
     </div>
     {{ content }}
 
   </div>
 
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-  <script type="text/javascript" src="js/main.js"></script>
+  <script type="text/javascript" src="../js/main.js"></script>
 
 </body>
 </html>
