--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -7,11 +7,6 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
-::selection {
-  // background: $midpointBlue;
-}
-
 html,
 body {
   margin: 0;
@@ -22,31 +17,115 @@ body {
   background-color: #1e1e2f;
   color: #fff;
 }
-
 a {
   text-decoration: none;
   color: #fff;
 }
+.site {
+  margin: 30px 0 0;
+}
+.header {
+  margin-bottom: 20px;
+  .title {
+    text-align: center;
+    color: #fff;
+    font-size: 50px;
+    margin: 0;
+  }
+}
 
-.title {
-  text-align: center;
-  color: #fff;
-  font-size: 100px;
-  margin: 30px;
+.now-playing {
+  border-radius: 3px;
+  padding: 10px 15px;
+  width: 90%;
+  margin: 30px auto;
+  // text-align: center;
+  background: rgba(255,255,255,0.1);
+  h3 {
+    margin: 5px 0 20px;
+  }
+  .artwork {
+    width: 100px;
+    margin-bottom: 10px;
+    display: inline-block;
+    vertical-align: top;
+    margin-right: 10px;
+  }
+  .info {
+    display: inline-block;
+    vertical-align: top;
+    .name {
+      font-weight: 700;
+    }
+    .rating {
+      margin-top: 10px;
+    }
+  }
+}
+
+.search-box {
+  width: 90%;
+  margin: 10px auto 30px;
+  input {
+    border: none;
+    margin: 0px auto;
+    width: 100%;
+    height: 50px;
+    border-radius: 3px;
+    font-family: 'Proxima Nova';
+    font-size: 20px;
+    padding: 10px;
+  }
 }
 
 .list-container {
-  width: 500px;
+  width: 90%;
   margin: 0 auto;
-  border: 1px solid white;
-  ul.song-list {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    .song {
-      padding: 20px;
+  table {
+    border-collapse: collapse;
+    width: 100%;
+    table-layout: fixed;
+    tr {
       background: rgba(255,255,255,0.1);
-      border: 1px solid #ccc;
+      border-bottom: 1px solid #DFE2E5;
+      height: 55px;
+      &:first-of-type {
+        td:first-of-type {
+          border-top-left-radius: 3px;
+        }
+        td:last-of-type {
+          border-top-right-radius: 3px;
+        }
+      }
+      &:last-of-type {
+        border: none;
+        td:first-of-type {
+          border-bottom-left-radius: 3px;
+        }
+        td:last-of-type {
+          border-bottom-right-radius: 3px;
+        }
+      }
+      td {
+        padding: 0px 5px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        &.ranking {
+          padding-left: 10px;
+          width: 20px;
+        }
+        &.name {
+          font-weight: 700;
+          width: 100px;
+        }
+        &.artist {
+          width: 90px;
+        }
+        &.vote {
+          width: 30px;
+        }
+      }
     }
   }
 }
